index.html file updated

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@ machine learning, algorithms and natural language processing. I love incorporati
       <div class="container">
         <footer class="footer">
           
-<a href="mailto:drishi@uwaterloo.ca"><i class="svg-icon email"></i></a>
+<a href="mailto:girdhar_coer@yahoo.co.in"><i class="svg-icon email"></i></a>
 
 
-<a href="https://github.com/deerishi"><i class="svg-icon github"></i></a>
+<a href="https://github.com/girdhar"><i class="svg-icon github"></i></a>
 
-<a href="https://www.linkedin.com/in/deepak-rishi-182b8657"><i class="svg-icon linkedin"></i></a>
+<a href="https://www.linkedin.com/in/girdhar-singh-bora-24688319/"><i class="svg-icon linkedin"></i></a>
 
 
 
